Refactored brush out, added color picker

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -7,12 +7,17 @@
 <link rel="stylesheet" type="text/css" href="style/index.css" />
 <script type="text/javascript" src="script/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.5.3/math.min.js"></script>
+<script type="text/javascript" src="script/modernizr.js"></script>
+<script type="text/javascript" src="script/color-polyfill.js"></script>
 <script type="text/javascript" src="script/three.js"></script>
+<script type="text/javascript" src="script/tool/brush.js"></script>
 <script type="text/javascript" src="script/maille.js"></script>
 </head>
 
 <body>
 	<h1>Maille Draw</h1>
+	<input id="ring-color" type="color" value="#FFFFFF" />
+	<br />
 
 	<canvas id="canvas" width="1080" height="720"></canvas>
 </body>
