WIP: recursive ring generation from JSON

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -26,8 +26,11 @@
 		<select id="wire-gauge-system"></select><select id="wire-gauge"></select>
 		<br />
 		
-		<label for="inner-diameter">ID: </label><input id="inner-diameter" class="unit-field" type="number" value="0.4" min="0" step="0.001" />
-		<br />
+		<div class="field-div"><label for="inner-diameter">ID: </label><input id="inner-diameter" class="unit-field" type="number" value="1" min="0" step="0.001" />
+		<br /></div>
+		
+		<div class="field-div"><label for="aspect-ratio">AR: </label><input id="aspect-ratio" class="" type="number" value="1" min="0" step="0.001" />
+		<br /></div>
 		
 		<input id="ring-color" type="color" value="#FFFFFF" />
 		<br />
