Reading ring defs from JSON

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -23,14 +23,15 @@
 		<input id="units-mm" type="radio" name="units" value="mm"><label for="units-mm">mm.</label>
 		<br />
 		
+		<select id="weave"></select>
+		<br />
+		
 		<select id="wire-gauge-system"></select><select id="wire-gauge"></select>
 		<br />
 		
-		<div class="field-div"><label for="inner-diameter">ID: </label><input id="inner-diameter" class="unit-field" type="number" value="1" min="0" step="0.001" />
-		<br /></div>
+		<div class="field-div"><label for="inner-diameter">ID: </label><input id="inner-diameter" class="unit-field" type="number" value="1" min="0" step="0.001" /></div>
 		
-		<div class="field-div"><label for="aspect-ratio">AR: </label><input id="aspect-ratio" class="" type="number" value="1" min="0" step="0.001" />
-		<br /></div>
+		<div class="field-div"><label for="aspect-ratio">AR: </label><input id="aspect-ratio" class="" type="number" value="1" min="0" step="0.001" /></div>
 		
 		<input id="ring-color" type="color" value="#FFFFFF" />
 		<br />
