Multiple ring types supported, working on linkRings for complex patterns

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -26,12 +26,16 @@
 		<select id="weave"></select>
 		<br />
 		
-		<select id="wire-gauge-system"></select><select id="wire-gauge"></select>
-		<br />
-		
-		<div class="field-div"><label for="inner-diameter">ID: </label><input id="inner-diameter" class="unit-field" type="number" value="1" min="0" step="0.001" /></div>
-		
-		<div class="field-div"><label for="aspect-ratio">AR: </label><input id="aspect-ratio" class="" type="number" value="1" min="0" step="0.001" /></div>
+		<div id="ring-div-div">
+			<div class="ring-div">
+				<select class="wire-gauge-system"></select><select class="wire-gauge"></select>
+				<br />
+				
+				<div class="field-div"><label for="inner-diameter">ID: </label><input class="inner-diameter unit-field" type="number" value="1" min="0" step="0.001" /></div>
+				
+				<div class="field-div"><label for="aspect-ratio">AR: </label><input class="aspect-ratio" type="number" value="1" min="0" step="0.001" /></div>
+			</div>
+		</div>
 		
 		<input id="ring-color" type="color" value="#FFFFFF" />
 		<br />
