WIP: links using graphlib

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="script/color-polyfill.js"></script>
 <script type="text/javascript" src="script/three.js"></script>
 <script type="text/javascript" src="script/tool/brush.js"></script>
+<script type="text/javascript" src="script/graphlib.js"></script>
 <script type="text/javascript" src="script/maille.js"></script>
 </head>
 
