Graph linking working!

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="script/three.js"></script>
 <script type="text/javascript" src="script/tool/brush.js"></script>
 <script type="text/javascript" src="script/graphlib.js"></script>
+<script type="text/javascript" src="data/weave/weaves.js"></script>
 <script type="text/javascript" src="script/maille.js"></script>
 </head>
 
