Fixed ring placement for jap. 6-in-1; added math parsing and values for pos/rot defs; tool buttons; camera move and zoom

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -10,9 +10,11 @@
 <script type="text/javascript" src="script/modernizr.js"></script>
 <script type="text/javascript" src="script/color-polyfill.js"></script>
 <script type="text/javascript" src="script/three.js"></script>
-<script type="text/javascript" src="script/tool/brush.js"></script>
 <script type="text/javascript" src="script/graphlib.js"></script>
+<script type="text/javascript" src="script/parser.js"></script>
 <script type="text/javascript" src="data/weave/weaves.js"></script>
+<script type="text/javascript" src="script/tool/brush.js"></script>
+<script type="text/javascript" src="script/tool/move.js"></script>
 <script type="text/javascript" src="script/maille.js"></script>
 </head>
 
@@ -39,8 +41,15 @@
 			</div>
 		</div>
 		
+		<button id="brush-button" class="tool-button" /></button>
+		<button id="move-button" class="tool-button" /></button>
+		<br />
 		<input id="ring-color" type="color" value="#FFFFFF" />
 		<br />
+	</div>
+	
+	<div id="footer">
+		<div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>. Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 	</div>
 </body>
 </html>
