Per-ring type default color setting

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -45,6 +45,7 @@
 			<div id="ring-div-div">
 				<div class="ring-div">
 					<input class="ring-enable" type="checkbox" checked />
+					<input class="default-color" type="color" value="#FF00FF" />
 					<select class="wire-gauge-system"></select><select class="wire-gauge"></select>
 					<br />
 					
