Small tweaks to bounded sliders; fixes to ID/AR updating

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -39,8 +39,10 @@
 				<button id="brush-button" class="tool-button" /></button>
 				<button id="move-button" class="tool-button" /></button>
 				<br />
-				<input id="ring-color" type="color" value="#FFFFFF" />
-				<br />
+				<div id="sub-tool-div">
+					<input id="ring-color" type="color" value="#FFFFFF" />
+					<br />
+				</div>
 			</div>
 			
 			<div id="ring-div-div">
