Fix slider bubble positions; erase tool; shared materials

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="script/parser.js"></script>
 <script type="text/javascript" src="data/weave/weaves.js"></script>
 <script type="text/javascript" src="script/tool/brush.js"></script>
+<script type="text/javascript" src="script/tool/eraser.js"></script>
 <script type="text/javascript" src="script/tool/move.js"></script>
 <script type="text/javascript" src="script/boundedSlider.js"></script>
 <script type="text/javascript" src="script/maille.js"></script>
@@ -37,6 +38,7 @@
 			
 			<div id="tool-div">
 				<button id="brush-button" class="tool-button" /></button>
+				<button id="eraser-button" class="tool-button" /></button>
 				<button id="move-button" class="tool-button" /></button>
 				<br />
 				<div id="sub-tool-div">
