Undo/redo buttons

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -37,9 +37,12 @@
 			</div>
 			
 			<div id="tool-div">
-				<button id="brush-button" class="tool-button" /></button>
-				<button id="eraser-button" class="tool-button" /></button>
-				<button id="move-button" class="tool-button" /></button>
+				<button id="undo-button" class="command-button"></button>
+				<button id="redo-button" class="command-button"></button>
+				<br />
+				<button id="brush-button" class="tool-button"></button>
+				<button id="eraser-button" class="tool-button"></button>
+				<button id="move-button" class="tool-button"></button>
 				<br />
 				<div id="sub-tool-div">
 					<input id="ring-color" type="color" value="#FFFFFF" />
