Files needed for printing

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -37,12 +37,13 @@
 			</div>
 			
 			<div id="tool-div">
-				<button id="undo-button" class="command-button"></button>
-				<button id="redo-button" class="command-button"></button>
+				<button id="undo-button" class="command-button" alt="Undo (Ctrl+Z)" title="Undo (Ctrl+Z)"></button>
+				<button id="redo-button" class="command-button" alt="Redo (Ctrl+Y)" title="Redo (Ctrl+Y)"></button>
+				<button id="print-button" class="command-button" alt="Print (P)" title="Print (P)"></button>
 				<br />
-				<button id="brush-button" class="tool-button"></button>
-				<button id="eraser-button" class="tool-button"></button>
-				<button id="move-button" class="tool-button"></button>
+				<button id="brush-button" class="tool-button" alt="Brush (B)" title="Brush (B)"></button>
+				<button id="eraser-button" class="tool-button" alt="Eraser (E)" title="Eraser (E)"></button>
+				<button id="move-button" class="tool-button" alt="Move (M)" title="Move (M)"></button>
 				<br />
 				<div id="sub-tool-div">
 					<input id="ring-color" type="color" value="#FFFFFF" />
