Alt toggle for move tool

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -66,6 +66,9 @@
 						<input id="ring-color" type="color" value="#C40A00" />
 						<br />
 					</div>
+					<div id="move-button-sub-tool-div" class="sub-tool-div">
+						Hold down Alt to toggle the Move tool.
+					</div>
 					<div id="add-button-sub-tool-div" class="sub-tool-div">
 						Click on a ring to re-add connected rings.
 					</div>
