Color counting the not stupid way

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="script/graphlib.js"></script>
 <script type="text/javascript" src="script/parser.js"></script>
 <script type="text/javascript" src="data/weave/weaves.js"></script>
+<script type="text/javascript" src="data/wire/materials.json"></script>
 <script type="text/javascript" src="script/tool/brush.js"></script>
 <script type="text/javascript" src="script/tool/eraser.js"></script>
 <script type="text/javascript" src="script/tool/move.js"></script>
@@ -99,6 +100,18 @@
 						</table>
 						</div>
 					</div>
+				</div>
+			</div>
+			
+			<div id="weights-div">
+				<h4>Weight</h4>
+				<div id="weights-inner-div">
+					<table id="weights-table">
+					<thead><th>Material</th><th>Weight</th></thead>
+					<tbody>
+					<tr><td class="material-cell">Stainless 302</td><td class="weight-cell"></td></tr>
+					</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
