--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="script/graphlib.js"></script>
 <script type="text/javascript" src="script/parser.js"></script>
 <script type="text/javascript" src="data/weave/weaves.js"></script>
-<script type="text/javascript" src="data/wire/materials.json"></script>
+<script type="text/javascript" src="data/wire/materials.js"></script>
 <script type="text/javascript" src="script/tool/brush.js"></script>
 <script type="text/javascript" src="script/tool/eraser.js"></script>
 <script type="text/javascript" src="script/tool/move.js"></script>
@@ -83,6 +83,8 @@
 						<input class="ring-enable" type="checkbox" checked /><label class="fa fa-unlock" />
 						</div>				
 						<label>Wire type:</label><select class="wire-gauge-system"></select><select class="wire-gauge"></select>
+						<br />			
+						<label>Material:</label><select class="wire-material"></select><label class="weight-label">Weight: </label><span class="weight-span"></span>
 						<br />
 						
 						<label>Default color:</label><input class="default-color" type="color" value="#DCDCDC" />
@@ -100,18 +102,6 @@
 						</table>
 						</div>
 					</div>
-				</div>
-			</div>
-			
-			<div id="weights-div">
-				<h4>Weight</h4>
-				<div id="weights-inner-div">
-					<table id="weights-table">
-					<thead><th>Material</th><th>Weight</th></thead>
-					<tbody>
-					<tr><td class="material-cell">Stainless 302</td><td class="weight-cell"></td></tr>
-					</tbody>
-					</table>
 				</div>
 			</div>
 		</div>
