Window resizing; CSS tweaks

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -80,14 +80,14 @@
 				<div class="ring-div bordered-div">
 					<div class="ring-inner-div">
 						<div class="ring-enable-div">
-						<input class="ring-enable" type="checkbox" checked /><label class="fa fa-unlock" />
+						<input class="ring-enable" type="checkbox" checked /><label class="fa fa-unlock" aria-label="Enable/disable editing" title="Enable/disable editing" />
 						</div>				
-						<label>Wire type:</label><select class="wire-gauge-system"></select><select class="wire-gauge"></select>
+						<label class="left-align">Wire type:</label><select class="wire-gauge-system"></select><select class="wire-gauge"></select>
 						<br />			
-						<label>Material:</label><select class="wire-material"></select><label class="weight-label">Weight: </label><span class="weight-span"></span>
+						<label class="left-align">Material:</label><select class="wire-material"></select><label class="weight-label">Weight: </label><span class="weight-span"></span>
 						<br />
 						
-						<label>Default color:</label><input class="default-color" type="color" value="#DCDCDC" />
+						<label class="left-align">Default color:</label><input class="default-color" type="color" value="#DCDCDC" />
 						<br />
 						
 						<div class="field-div"><label for="inner-diameter">ID: </label><input class="inner-diameter unit-field" type="range" value="1" min="0.01" max="2" step="0.01" required /></div>
