--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -49,6 +49,9 @@
 					<button id="redo-button" class="command-button fa fa-repeat" aria-label="Redo (Ctrl+Y)" title="Redo (Ctrl+Y)"></button>
 					<button id="print-button" class="command-button fa fa-print" aria-label="Print (P)" title="Print (P)"></button>
 				</div>
+				<div id="zoom-div">
+					<label class="fa fa-search-minus" /><input type="range" id="zoom-input" step="0.01" required /><label class="fa fa-search-plus" />
+				</div>
 			</div>
 			
 			<div id="tool-div" class="bordered-div">
