Zoom icons CSS fix

--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -50,7 +50,7 @@
 					<button id="print-button" class="command-button fa fa-print" aria-label="Print (P)" title="Print (P)"></button>
 				</div>
 				<div id="zoom-div">
-					<label class="fa fa-search-minus" /><input type="range" id="zoom-input" step="0.01" required /><label class="fa fa-search-plus" />
+					<label class="fa fa-search-minus"></label><input type="range" id="zoom-input" step="0.01" required /><label class="fa fa-search-plus" style="margin-left: 2px;"></label>
 				</div>
 			</div>
 			
