--- a/emaille/war/index.html
+++ b/emaille/war/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="https://use.fontawesome.com/65e3673d8d.js"></script>
 <script type="text/javascript" src="script/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.5.3/math.min.js"></script>
+<script type="text/javascript" src="script/localenv.js"></script>
 <script type="text/javascript" src="script/modernizr.js"></script>
 <script type="text/javascript" src="script/color-polyfill.js"></script>
 <script type="text/javascript" src="script/three.js"></script>
