--- a/emaille/www/index.html
+++ b/emaille/www/index.html
@@ -5,8 +5,11 @@
 <title>e-maille</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="/style/index.css" />
+<link rel="stylesheet" type="text/css" href="/style/featherlight.min.css" />
 <script type="text/javascript" src="https://use.fontawesome.com/65e3673d8d.js"></script>
 <script type="text/javascript" src="/script/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="/script/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/script/featherlight.min.js"></script>
 <script type="text/javascript" src="/script/math.min.js"></script>
 <script type="text/javascript" src="/script/localenv.js"></script>
 <script type="text/javascript" src="/script/modernizr.js"></script>
@@ -14,8 +17,6 @@
 <script type="text/javascript" src="/script/three.js"></script>
 <script type="text/javascript" src="/script/graphlib.js"></script>
 <script type="text/javascript" src="/script/parser.js"></script>
-<!-- <script type="text/javascript" src="data/weave/weaves.js"></script> -->
-<!-- <script type="text/javascript" src="data/wire/materials.js"></script> -->
 <script type="text/javascript" src="/script/tool/brush.js"></script>
 <script type="text/javascript" src="/script/tool/eraser.js"></script>
 <script type="text/javascript" src="/script/tool/move.js"></script>
@@ -30,6 +31,12 @@
 	<div class="row">
 		<canvas id="canvas" width="1080" height="720" class="ten columns"></canvas>
 		
+		<div id="weave-select">	
+			<h4>Choose a weave (cannot be changed)</h4>		
+		    <select id="weave"></select>
+			<br />
+		</div>
+		
 		<div id="control-panel" class="row two columns">
 			<input type="button" id="save-button" value="Save" />
 			<div id="units-div" class="row bordered-div">
@@ -39,9 +46,6 @@
 					<input id="units-mm" class="two columns" type="radio" name="units" value="mm"><label for="units-mm" class="one column">mm.</label>
 					<br />
 				</div>
-				
-				<select id="weave"></select>
-				<br />
 			</div>
 			
 			<div id="command-div" class="bordered-div">
