Basic camera rotation

--- a/emaille/www/index.html
+++ b/emaille/www/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="/script/tool/brush.js"></script>
 <script type="text/javascript" src="/script/tool/eraser.js"></script>
 <script type="text/javascript" src="/script/tool/move.js"></script>
+<script type="text/javascript" src="/script/tool/rotate.js"></script>
 <script type="text/javascript" src="/script/tool/cut.js"></script>
 <script type="text/javascript" src="/script/tool/add.js"></script>
 <script type="text/javascript" src="/script/boundedSlider.js"></script>
@@ -65,8 +66,10 @@
 				<div id="tool-inner-div">
 					<button id="brush-button" class="tool-button fa fa-paint-brush" aria-label="Brush (B)" title="Brush (B)"></button>
 					<button id="eraser-button" class="tool-button fa fa-eraser" aria-label="Eraser (E)" title="Eraser (E)"></button>
-					<button id="move-button" class="tool-button fa fa-arrows" aria-label="Move (M)" title="Move (M)"></button>
-					<br />				
+					<br />		
+					<button id="move-button" class="tool-button fa fa-arrows" aria-label="Move (M)" title="Move (M)"></button>		
+					<button id="rotate-button" class="tool-button fa fa-camera" aria-label="Rotate (R)" title="Rotate (R)"></button>
+					<br />
 					<button id="cut-button" class="tool-button fa fa-scissors" aria-label="Cut (X)" title="Cut (X)"></button>
 					<button id="add-button" class="tool-button fa fa-plus" aria-label="Add (A)" title="Add (A)"></button>
 				</div>
