Switched to json weaves list

--- a/emaille/www/index.html
+++ b/emaille/www/index.html
@@ -70,7 +70,8 @@
 					<button id="eraser-button" class="tool-button fa fa-eraser" aria-label="Eraser (E)" title="Eraser (E)"></button>
 					&nbsp;&nbsp;&nbsp;&nbsp;	
 					<button id="move-button" class="tool-button fa fa-arrows" aria-label="Move (M)" title="Move (M)"></button>		
-					<button id="rotate-button" class="tool-button fa fa-camera" aria-label="Rotate (R)" title="Rotate (R)"></button>
+					<button id="rotate-button" class="tool-button fa fa-refresh" aria-label="Rotate (R)" title="Rotate (R)">
+					</button>
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					<button id="cut-button" class="tool-button fa fa-scissors" aria-label="Cut (X)" title="Cut (X)"></button>
 					<button id="add-button" class="tool-button fa fa-plus" aria-label="Add (A)" title="Add (A)"></button>
