--- a/emaille/www/contact.html
+++ b/emaille/www/contact.html
@@ -4,6 +4,20 @@
 <head>
 <title>e-maille - Contact</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<script type="text/javascript" src="/script/jquery-2.2.3.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+	$("#send-button").on("click", function(e) {
+		e.preventDefault();
+		$.post("/contact", {
+				type: $("#type").val(),
+				subject: $("#subject").val(),
+				body: $("#body").val()
+			}
+		);
+	});
+});
+</script>
 <style type="text/css">
 div#contact-div label {
 	width: 15%;
@@ -25,7 +39,7 @@ input[type="text"], textarea, select {
 <body>
 <div id="contact-div">
 	<h2>Contact</h2>
-	<form action="/contact" method="post">
+	<form>
 		<label for="type">Message type: </label><select name="type" id="type">
 			<option>Bug report</option>
 			<option>Weave request</option>
