Probable final commit before merge to master

--- a/emaille/www/index.html
+++ b/emaille/www/index.html
@@ -13,20 +13,21 @@
 <script type="text/javascript" src="/script/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/script/featherlight.min.js"></script>
 <script type="text/javascript" src="/script/math.min.js"></script>
-<script type="text/javascript" src="/script/localenv.js"></script>
+<!-- <script type="text/javascript" src="/script/localenv.js"></script> -->
 <script type="text/javascript" src="/script/modernizr.js"></script>
 <script type="text/javascript" src="/script/color-polyfill.js"></script>
 <script type="text/javascript" src="/script/three.js"></script>
 <script type="text/javascript" src="/script/graphlib.js"></script>
 <script type="text/javascript" src="/script/parser.js"></script>
-<script type="text/javascript" src="/script/tool/brush.js"></script>
+<!-- <script type="text/javascript" src="/script/tool/brush.js"></script>
 <script type="text/javascript" src="/script/tool/eraser.js"></script>
 <script type="text/javascript" src="/script/tool/move.js"></script>
 <script type="text/javascript" src="/script/tool/rotate.js"></script>
 <script type="text/javascript" src="/script/tool/cut.js"></script>
 <script type="text/javascript" src="/script/tool/add.js"></script>
 <script type="text/javascript" src="/script/boundedSlider.js"></script>
-<script type="text/javascript" src="/script/maille.js"></script>
+<script type="text/javascript" src="/script/maille.js"></script> -->
+<script type="text/javascript" src="/script/maille.min.js"></script>
 </head>
 
 <body>
