--- a/emaille/www/contact.html
+++ b/emaille/www/contact.html
@@ -11,8 +11,14 @@ $(document).ready(function() {
 		e.preventDefault();
 		$.post("/contact", {
 				type: $("#type").val(),
+				email: $("#email").val(),
 				subject: $("#subject").val(),
 				body: $("#body").val()
+			},
+			function() {
+				$("#email").val("");
+				$("#subject").val("");
+				$("#body").val("");
 			}
 		);
 	});
@@ -24,7 +30,7 @@ div#contact-div label {
 	display: inline-block;
 	vertical-align: top;
 }
-input[type="text"], textarea, select {
+input[type="text"], input[type="email"], textarea, select {
 	padding: 6px 0px;
 	border-radius: 4px;
 	box-shadow: none;
@@ -46,6 +52,7 @@ input[type="text"], textarea, select {
 			<option>Feature request</option>
 			<option>Other</option>
 		</select><br />
+		<label for="email">Email: </label><input type="email" name="email" id="email" required></input><br />
 		<label for="subject">Subject: </label><input type="text" name="subject" id="subject" required></input><br />
 		<label for="body">Body: </label><textarea name="body" id="body" rows="3" required></textarea><br />
 		<input type="submit" id="send-button" value="Send" />
